--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <nav class="navigation container">
-        <div class="nav-brand">ANUPAM SRIVASTAVA</div>
+        <div class="nav-brand">
+        ANUPAM SRIVASTAVA
+        <div class="small">anu1506sri@gmail.com</div>
+        </div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
                 <a class="link" href="/">Home</a>
@@ -18,6 +21,9 @@
             </li>
             <li class="list-item-inline">
                 <a class="link " href="/blogs.html">Blogs</a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link link-active" href="/education.html">Education</a>
             </li>
         </ul>
     </nav>
