--- a/blogs.html
+++ b/blogs.html
@@ -23,7 +23,7 @@
                 <a class="link link-active" href="/blogs.html">Blogs</a>
             </li>
             <li class="list-item-inline">
-                <a class="link link-active" href="/education.html">Education</a>
+                <a class="link " href="/education.html">Education</a>
             </li>
         </ul>
     </nav>
