update home page

--- a/index.html
+++ b/index.html
@@ -58,6 +58,16 @@
         </div>
     </section>
 
+    <section class="section">
+        <div class="container container-center">
+            <h1>Education</h1>
+            <h3 style="color:gray">Bachelor of Technology (B.Tech), Computer Science & Engineering</h3>
+            <p style="color: rgb(21, 20, 37)"><strong>Indian Institute Of Information Technology Surat</strong></p>
+            <small>2018 - 2022</small>
+            <a class="link link-primary" href="/education.html">Read more</a>
+        </div>
+    </section>
+
  <footer class="footer">
         <div class="footer-header">Social media presence</div>
         <br>
