--- a/projects.html
+++ b/projects.html
@@ -33,6 +33,19 @@
     </header>
 
     <ul class="list-non-bullet">
+        <li class="ow">
+             <article class="showcase-list container container-center ">
+                <h1>DO-TO-DO</h1>
+                <p>Are you a forgetter? Here's an app for you to make to do list and mark your task as completed when
+                    done . Made from scratch using <strong>ReactJs</strong> and <strong>Firebase firestore</strong> .
+                </p>
+
+                <a class="link link-primary" href="https://do-to-do.netlify.app/">Live Project</a>
+                <a class="link link-secondary" href="https://github.com/ooreally/to-do">View Source</a>
+
+            </article>
+
+        </li>
 
         <li>
             <article class="showcase-list container container-center ">
