--- a/index.html
+++ b/index.html
@@ -42,19 +42,21 @@
 
     <section class="section">
         <div class="container container-center">
-            <h1>Projects</h1>
-            <p>I like to showcase my work and thus, you can see my projects hosted online.</p>
-            <br>
-            <a class="link link-primary" href="/projects.html">See Projects</a>
+            <h1>Internships</h1>
+            <h3 style="color:gray;">Frontend Engineer Intern at <a href="https://www.linkedin.com/company/babel-datasolutions/mycompany/" style="color: #686bf1;; text-decoration: none">
+                <strong>Babel</strong>
+            </a>
+            </h3>
+            <strong>June'21-Present</strong>
         </div>
     </section>
-
+    
     <section class="section ow">
         <div class="container container-center">
-            <h1>Blogs</h1>
-            <p>I am also working on some technical and non techincal blogs. I like to document my journey of learning.</p>
-            <br>
-            <a class="link link-secondary" href="/blogs.html">Read Blogs</a>
+            <h1>Projects</h1>
+            <p>I like to showcase my work and thus, you can see my projects hosted online.</p>
+
+            <a class="link link-primary" href="/projects.html">See Projects</a>
         </div>
     </section>
 
@@ -64,7 +66,18 @@
             <h3 style="color:gray">Bachelor of Technology (B.Tech), Computer Science & Engineering</h3>
             <p style="color: rgb(21, 20, 37)"><strong>Indian Institute Of Information Technology Surat</strong></p>
             <small>2018 - 2022</small>
+
             <a class="link link-primary" href="/education.html">Read more</a>
+        </div>
+    </section>
+
+    <section class="section ow">
+        <div class="container container-center">
+            <h1>Blogs</h1>
+            <p>I am also working on some technical and non techincal blogs. I like to document my journey of learning.
+            </p>
+
+            <a class="link link-secondary" href="/blogs.html">Read Blogs</a>
         </div>
     </section>
 
