--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <section class="section ow">
         <div class="container container-center">
             <h1>Technologies</h1>
-            <p>I'm familiar with JavaScript, ReactJS, HTML5, CSS3, C++, Pyhton, Git, Firebase and web hosting.  </p>
+            <p>I'm familiar with JavaScript, ReactJS, HTML5, CSS3, C++, Git, Firebase and web hosting.  </p>
         </div>
     </section>
 
